Fix(MainPage.js) Background covers entire screen

--- a/public/style.css
+++ b/public/style.css
@@ -3,9 +3,6 @@ body {
 }
 
 body #routes .main-page-container {
-  /* background-image: url('data.jpg') no-repeat center center fixed; */
-
-  /* background-color: #01579b; */
   overflow: hidden;
   background-image: url('data.jpg');
   background-size: cover;
@@ -18,6 +15,11 @@ body #routes .main-page-container {
   font-family: 'Nunito', sans-serif;
   font-size: 17pt;
   background-origin: content-box;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
 }
 
 .layer {
